--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ teeproxy:
   image: ankitguptag18/teeproxy:distroless-static
   ports:
     - "8000:8000"
-  command: /teeproxy -l=:8000 -a="hostname1:8888" -b="hostname2:9908" -debug=false
+  command: /teeproxy -l=:8000 -a="http://localhost:8888" -b="http://localhost:8889" -debug=false
  
 
